--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @font-face {
 	font-family: 'utm-androgyne';
 	src: url('https://candyfonts.com/wp-data/2018/10/26/11237/UTM Androgyne.ttf')
