--- a/src/pug/partials/header.pug
+++ b/src/pug/partials/header.pug
@@ -42,17 +42,21 @@ header.header
                             .wrap__items 
                                 .wrap__items-image 
                                     img(src="./assets/images/cart-avatar.jpg", alt="cart-img")
-                                .item__details
-                                    p.details__title Áo sơ mi nam
-                                    p.details__price 120.000 
+                                .wrap__items-details
+                                    span.details__title Áo sơ mi nam   
+                                        span.ms-3 x
+                                    span.details__price 120.000 
                                         sup đ
+                              
                             .wrap__items 
                                 .wrap__items-image 
                                     img(src="./assets/images/cart-avatar.jpg", alt="cart-img")
                                 .wrap__items-details
-                                    p.details__title Áo sơ mi nam
-                                    p.details__price 120.000 
+                                    span.details__title Áo sơ mi nam
+                                        span.ms-3 x
+                                    span.details__price 120.000 
                                         sup đ
+                                
                             .wrap__footer
                                 .wrap__footer-total
                                     p Tổng số
