--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -134,6 +134,17 @@
 	}
 }
 
+@mixin before-list-item {
+	content: '';
+	height: 5px;
+	width: 5px;
+	background: #789629;
+	position: absolute;
+	right: 100%;
+	top: 50%;
+	transform: translateY(-50%);
+	margin-right: 5px;
+}
 $mobile-width: 480px;
 $tablet-width: 768px;
 $desktop-width: 1024px;
