--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -45,6 +45,7 @@
 				@include font(OpenSans, 1.2, 16px, null, bold);
 				padding: 3rem 2rem;
 				text-transform: uppercase;
+				cursor: pointer;
 
 				@include mobile {
 					width: 100%;
@@ -162,6 +163,7 @@
 					padding: 10px;
 					opacity: 0;
 					visibility: hidden;
+					background-color: $body-color;
 					@include transition;
 
 					@include tablet {
@@ -195,7 +197,12 @@
 
 						&-details {
 							@include font(OpenSans, 1.4, 24px, null, 600);
+							margin-left: 10px;
 
+							.details__title {
+								display: block;
+								@include font(OpenSans, 1.4, null, null, 400);
+							}
 							.details__price {
 								@include font(Lobster, 1.4, null, null, 600);
 								color: $primary-color;
@@ -249,6 +256,7 @@
 	.mega-menu {
 		position: absolute;
 		overflow: hidden;
+		background-color: $body-color;
 		top: 7.8rem;
 		height: 0;
 		margin-left: 20px;
@@ -259,6 +267,7 @@
 		padding: 3.5rem 4rem;
 		visibility: hidden;
 		opacity: 0;
+		z-index: 1;
 		@include transition;
 
 		&__col {
@@ -278,15 +287,7 @@
 				.wrap__item {
 					@include transition;
 					&::before {
-						content: '';
-						height: 5px;
-						width: 5px;
-						background: #789629;
-						position: absolute;
-						right: 100%;
-						top: 50%;
-						transform: translateY(-50%);
-						margin-right: 5px;
+						@include before-list-item;
 					}
 
 					&:hover {
